--- a/puja.html
+++ b/puja.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1 class="crack-the-bet">শিব পূজো 2025</h1>
-        <nav>
+       <hr> <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="kirton.html">1st Kirton</a></li>
