--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <br>পরিচালনায়- ছাতাপাথর গ্রামস্থ ষোলআনা
             
             <br>ছাতাপাথর - শালতোড়া - বাঁকুড়া</h2>
-        <nav>
+       <hr> <nav>
             <ul>
                 <li><a href="puja.html">Shiv Puja</a></li>
                 <li><a href="kirton.html">1st Kirton</a></li>
