--- a/jatra2.html
+++ b/jatra2.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1 class="crack-the-bet">দ্বিতীয় যাত্রা</h1>
-        <nav>
+        <hr> <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="puja.html">Shiv Puja</a></li>
