--- a/kirton.html
+++ b/kirton.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1 class="crack-the-bet"> প্রথম কীর্তন </h1>
-        <nav>
+        <hr><nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="puja.html">Shiv Puja</a></li>
