--- a/puja.html
+++ b/puja.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <h1 class="crack-the-bet">শিব পূজো 2025</h1>
-       <hr> <nav>
-            <ul>
+        <nav>
+            <hr><ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="kirton.html">1st Kirton</a></li>
                 <li><a href="kirton2.html">2nd Kirton</a></li>
@@ -47,14 +47,14 @@
     <section class="puja-images">
         <h3>Shiv Puja Moments</h3>
         <div class="image-gallery">
-            <img src="picture1.jpg" alt="Shiv Puja Image">
+            <img src="picture111.jpg" alt="Shiv Puja Image">
             <img src="picture2.jpg" alt="Shiv Temple">
-            <img src="picture3.jpg" alt="Devotees Worshiping">
+            <img src="picture333.jpg" alt="Devotees Worshiping">
         </div>
     </section>
 
     <footer>
-        <p>© 2025 Shiv Puja Festival | All Rights Reserved</p>
+        <p>-------- 2025 Shiv Puja Festival--------</p>
     </footer>
 </body>
 </html>
